# aivoa

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  pdf_text.txt  pyrefly.toml
backend/: .env.example  pyproject.toml  requirements.txt  seed.py  test_connection.py  verify_demo.py
backend/app/: config.py  crud.py  database.py  main.py  models.py  schemas.py
backend/app/agent/: __init__.py  graph.py  prompts.py  tools.py
backend/tests/: test_backend.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ChatPanel.tsx  HCPContextPanel.tsx  InteractionForm.tsx  InventoryPanel.tsx
frontend/src/store/: interactionSlice.ts
