[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aivoa-backend"
version = "0.1.0"
description = "AI-First CRM HCP Module Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "langgraph>=0.0.30",
    "langchain-core>=0.1.30",
    "langchain-groq>=0.0.1",
    "python-dotenv>=1.0.1",
    "pytest>=8.0.0",
    "httpx>=0.27.0",
    "types-psycopg2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
